logic/user-service/kube/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
    - user-service
  gateways:
    - kong-gateway
  http:
    - route:
        - destination:
            host: user-service
            port:
              number: 80
